--- a/index.ipynb
+++ b/index.ipynb
@@ -62,12 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "palermo = None\n",
-    "neighborhoods[1]"
+    "neighborhoods[1]=palermo"
    ]
   },
   {
