--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = None"
+    "ba_latitude = [1]"
    ]
   },
   {
