--- a/index.ipynb
+++ b/index.ipynb
@@ -112,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = neigbor[1]"
+    "ba_latitude = neighborhoods[1]"
    ]
   },
   {
