--- a/index.ipynb
+++ b/index.ipynb
@@ -112,11 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = neighborhoods[1]"
+    "ba_latitude = neighborhoods[1]\n",
+    "ba_latitude"
    ]
   },
   {
