--- a/index.ipynb
+++ b/index.ipynb
@@ -133,11 +133,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = cordinates"
+    "ba_longitude = coordinates[1]"
    ]
   },
   {
