--- a/index.ipynb
+++ b/index.ipynb
@@ -402,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = neighborhood_markers[-1]"
+    "la_boca_marker = neighborhood_markers[-1]\n"
    ]
   },
   {
