--- a/index.ipynb
+++ b/index.ipynb
@@ -398,11 +398,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<folium.map.Marker at 0x7fa69b43c940>,\n",
+       " <folium.map.Marker at 0x7fa69b43c978>,\n",
+       " <folium.map.Marker at 0x7fa69b4215c0>,\n",
+       " <folium.map.Marker at 0x7fa69b43c9e8>,\n",
+       " <folium.map.Marker at 0x7fa69b43ca20>,\n",
+       " <folium.map.Marker at 0x7fa69b43c9b0>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "la_boca_marker = neighborhood_markers[-1]\n"
+    "la_boca_marker = neighborhood_markers[-1]\n",
+    "neighborhood_markers"
    ]
   },
   {
