Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -468,13 +468,14 @@
        "<folium.map.Marker at 0x7fa69b43c9b0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neighborhood_markers.pop()"
+    "neighborhood_markers.pop()\n",
+    "la_boca_marker"
    ]
   },
   {
