Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -473,18 +473,20 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "neighborhoo"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
+      "6\n",
       "False\n"
      ]
     }
