--- a/index.ipynb
+++ b/index.ipynb
@@ -459,16 +459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fa69b43c9b0>"
+       "<folium.map.Marker at 0x7fa69b3c99b0>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,15 +479,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "False\n"
+      "5\n",
+      "True\n"
      ]
     }
    ],
