--- a/index.ipynb
+++ b/index.ipynb
@@ -509,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = nei"
+    "recoleta_marker = neighborhood"
    ]
   },
   {
